<resources>
    <string name="app_name">Comptidroid</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkingAccount">Compte courant</string>
    <string name="nodate">no date</string>
    <string name="noamount">no amout</string>
    <string name="menu_title_account">Accounts</string>
    <string name="menu_title_budget">Budgets</string>
    <string name="title_budget">Budget list</string>
    <string name="title_accounts">Account list</string>
    <string name="account">Account</string>
    <string name="operation">Operation</string>
    <string name="menu_populate">Populate</string>
    <string name="accounts_header">Your accounts</string>
    <string name="no_operation">No operation</string>
    <string name="no_account">No account</string>
    <string name="label">Label</string>
    <string name="title_date_picker">Operation date</string>
    <string name="operationDate">Operation date</string>
    <string name="new_operation">New operation</string>
    <string name="valueDate">Value Date</string>
    <string name="amount">Amount</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="select_date">Select a date</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
</resources>