<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_account">

    <fragment
        android:id="@+id/navigation_account"
        android:name="fr.ensisa.vallerich.comptidroid.ui.account.AccountListFragment"
        android:label="@string/title_accounts"
        tools:layout="@layout/account_list_fragment">
        <action
            android:id="@+id/action_navigation_accountList_to_account"
            app:destination="@id/accountFragment" />
    </fragment>

    <fragment
        android:id="@+id/accountFragment"
        android:name="fr.ensisa.vallerich.comptidroid.ui.account.AccountFragment"
        android:label="@string/account"
        tools:layout="@layout/account_fragment">
        <argument
            android:name="id"
            app:argType="long"
            android:defaultValue="0L" />

        <action
            android:id="@+id/action_navigation_account_to_operation"
            app:destination="@id/operationFragment" />
    </fragment>

    <fragment
        android:id="@+id/operationFragment"
        android:name="fr.ensisa.vallerich.comptidroid.ui.operation.OperationFragment"
        android:label="@string/operation"
        tools:layout="@layout/operation_fragment">
        <argument
            android:name="id"
            app:argType="long"
            android:defaultValue="0L"/>
    </fragment>

</navigation>