<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="vm" type="fr.ensisa.vallerich.comptidroid.ui.operation.OperationViewModel" />
        <variable name="setLabel" type="androidx.databinding.adapters.TextViewBindingAdapter.OnTextChanged" />
        <variable name="setAmount" type="androidx.databinding.adapters.TextViewBindingAdapter.OnTextChanged" />
        <variable name="changeDate" type="android.view.View.OnClickListener" />

        <import type="fr.ensisa.vallerich.comptidroid.model.Type"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.operation.OperationCreatorFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/label_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/label_edit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@{vm.label}"
                    android:onTextChanged="@{(s, start, before, count) -> setLabel.onTextChanged(s, start, before, count)}"
                    style="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amount_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@id/label_layout"
                app:layout_constraintStart_toStartOf="@id/label_layout"
                app:layout_constraintEnd_toEndOf="@id/label_layout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amount_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@{vm.amount}"
                    android:onTextChanged="@{(s, start, before, count) -> setAmount.onTextChanged(s, start, before, count)}"
                    style="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/amountError"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{`Max amount is ` + vm.maxAmount.longValue()}"
                android:visibility="gone"
                android:textColor="@color/error_color"
                app:layout_constraintStart_toStartOf="@id/amount_layout"
                app:layout_constraintTop_toBottomOf="@id/amount_layout"/>

            <RadioGroup
                android:id="@+id/type_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/amountError">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/debit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="@{vm.type != Type.CREDIT}"
                    android:onClick="@{() -> vm.setType(Type.DEBIT)}"
                    android:text="@string/debit" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/credit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="@{vm.type == Type.CREDIT}"
                    android:onClick="@{() -> vm.setType(Type.CREDIT)}"
                    android:text="@string/credit" />
            </RadioGroup>

            <TextView
                android:id="@+id/operation_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/operationDate"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/type_group"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/operation_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{vm.operationDate}"
                android:textSize="12sp"
                android:backgroundTint="@color/light_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/operation_date_text"/>


            <TextView
                android:id="@+id/value_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/valueDate"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/type_group"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/value_date_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{vm.valueDate}"
                android:textSize="12sp"
                android:backgroundTint="@color/light_gray"
                app:layout_constraintEnd_toEndOf="@id/value_date_text"
                app:layout_constraintTop_toBottomOf="@id/value_date_text"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/buttons_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:paddingVertical="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="@color/color_delete"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/create"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/create"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/create"
                    android:paddingVertical="10dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="@color/color_edit"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cancel"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>